[gd_scene load_steps=2 format=3 uid="uid://fe864gx3kjmn"]

[ext_resource type="Script" path="res://Scripts/Gui.gd" id="1_wy538"]

[node name="Gui" type="CanvasLayer"]
script = ExtResource("1_wy538")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
offset_right = 53.0
offset_bottom = 23.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="L_vida" type="Label" parent="Control/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Vida:"

[node name="P_vida" type="Label" parent="Control/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "0"

[connection signal="update_life" from="." to="." method="_on_update_life"]
